2009-02-01  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* doc/batteries/html/about.html: changed link to image

	* src/core/extlib/extSet.mli: @documents added

	* src/core/extlib/extMap.mli: @documents added

	* src/core/extlib/extHashtbl.mli: @documents added

2009-01-30  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* Makefile.in: [install] now does [chmod] on [ocaml], [ocamlc], ...
	
	* configure.ac: added destination directory test

	* src/batteries_toolchain/ocaml.in: created

2009-01-29  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* myocamlbuild.ml: [use_sexplib] now available also for target [doc]

	* src/batteries_toolchain/batteries_help.ml: in [load_index], only adding [basename] and [leafname] if they're not equal

	* src/main/nothreads/batteries.ml: [Data] added

	* src/core/extlib/substring.mli: What the heck is this module?

	* src/main/nothreads/batteries.ml: [Vect] added

	* src/main/threads/batteries.ml: [Vect] added

	* src/core/extlib.mlpack: [OptionLabels], [LazyListLabels] removed

	* src/core/_tags: extlib.mli now uses [use_sexplib] instead of [pkg_sexplib]

	* myocamlbuild.ml: [use_sexplib] added

	* src/core/extlib/lazyList.ml*: [ ^:^ ] added

	* examples/: rearranged

	* src/main/threads/batteries.ml: [LazyList] added

	* src/main/nothreads/batteries.ml: [LazyList] added

	* src/batteries_toolchain/batteries_help.ml: in [kind_of_name], "language" is also associated to [Topics]

	* build/META.in: [pa_comprehension.syntax] restored

2009-01-28  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* .gitignore: removed [ocaml] and [configure]

	* build/odoc_tags.ml: Jokes added

	* src/batteries_toolchain/top.ml: [print_*] registered

	* src/core/extlib.mlpack: moved [ExtString] above [ExtUTF8]

	* build/META.in: in [archive(toploop)], [batteries_toolchain.cma] replaces [batteries_help.cmo]

	* src/batteries_toolchain/ocaml: argument of [ocaml -init] now defined from [`ocamlfind`]
